# tic-tac-toe-task

./: .gitignore  CMakeLists.txt  Main.qml  README.md  TicTacToeField.qml  TicTacToeGame.qml  TicTacToeGameButtons.qml  TicTacToeGameConfig.qml  TicTacToePlayerDelegate.qml  helpers.h  main.cpp
app/: BotPlayerImpl.cpp  GameBoardImpl.cpp  GameBoardImpl.h  GameImpl.cpp  GameImpl.h  HumanPlayerImpl.cpp  Player.cpp  Player.h
models/: GameBoardModel.cpp  GameBoardModel.h  GameModel.cpp  GameModel.h  PlayerConfigModel.cpp  PlayerConfigModel.h
utils/: Utils.h
